--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
-node_modules
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
+.pnp.*
 package-lock.json
+node_modules
+.gitignore
+# Local Netlify folder
+.netlify
+.gitignore
