--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@chakra-ui/react": "^2.3.5",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "framer-motion": "^7.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.6.0",
     "react-scripts": "4.0.0"
   },
   "devDependencies": {
