--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.8",
+    "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
